--- a/src/Lazvard.Message.Cli/Lazvard.Message.Cli.csproj
+++ b/src/Lazvard.Message.Cli/Lazvard.Message.Cli.csproj
@@ -5,9 +5,36 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PublishSingleFile>true</PublishSingleFile>
+	<SelfContained>true</SelfContained>  
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <SignAssembly>False</SignAssembly>
+    <Copyright>Pejman Nikram</Copyright>
+    <PackageProjectUrl>https://github.com/PejmanNik/lazvard-message</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/PejmanNik/lazvard-message</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Title>lazvard message</Title>
+    <Authors>Pejman Nikram</Authors>
+    <Description>lightweight AMQP server - Azure Service Bus simulator</Description>
+    <PackageTags>amqp;service-bus;azure-service-bus;amqp-server</PackageTags>
+    <Version>0.1.0</Version>
+    <AssemblyVersion>0.1.0</AssemblyVersion>
+    <FileVersion>0.1.0</FileVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Amqp" Version="2.6.4" />
