--- a/src/Lazvard.Message.Cli/Lazvard.Message.Cli.csproj
+++ b/src/Lazvard.Message.Cli/Lazvard.Message.Cli.csproj
@@ -38,6 +38,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Amqp" Version="2.6.4" />
+    <PackageReference Include="Spectre.Console" Version="0.48.0" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageReference Include="Tommy" Version="3.1.2" />
   </ItemGroup>
 
