--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,13 +51,15 @@ jobs:
         run: dotnet build src/Lazvard.Message.Amqp.Server -c Release -o ./publish/
       - name: Nuget Push
         run: dotnet nuget push ./publish/*.nupkg -k ${{ secrets.NUGET_TOKEN }} -s https://api.nuget.org/v3/index.json --skip-duplicate
-  
+
   docker:
     runs-on: ubuntu-latest
     name: Push Docker image to Docker Hub
     permissions:
       id-token: write
+      contents: read
       attestations: write
+      packages: write
     steps:
       - uses: actions/checkout@v4
       - name: Log in to Docker Hub
@@ -65,7 +67,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
- 
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -81,10 +83,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-    
+
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: pejmann/lazvard-message
+          subject-name: index.docker.io/pejmann/lazvard-message
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
