--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,9 @@ jobs:
 
       - name: upload artifact
         uses: actions/upload-artifact@v4
-        path: "./publish/${{ matrix.rid }}.zip"
+        with:
+          name: build-artifact
+          path: "./publish/${{ matrix.rid }}.zip"
   
       - name: Push ${{ matrix.rid }}.zip to release
         uses: ncipollo/release-action@v1
