--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,20 +24,21 @@ jobs:
       - name: publish app for ${{ matrix.rid }}
         run: dotnet publish src/Lazvard.Message.Cli -r ${{ matrix.rid }} -c Release -o ./publish /p:DebugType=None /p:DebugSymbols=false
 
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.rid }}
+          path: ./publish/
+
       - name: Archive release for ${{ matrix.rid }}
         uses: thedoctor0/zip-release@0.7.5
+        if: ${{ github.event_name == 'push' }}
         with:
           type: "zip"
           directory: "./publish/"
           filename: "${{ matrix.rid }}.zip"
           path: "."
 
-      - name: upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifact
-          path: "./publish/${{ matrix.rid }}.zip"
-  
       - name: Push ${{ matrix.rid }}.zip to release
         uses: ncipollo/release-action@v1
         if: ${{ github.event_name == 'push' }}
